pwa withourt workbox

--- a/ui-vuetify/public/index.html
+++ b/ui-vuetify/public/index.html
@@ -8,6 +8,18 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
+
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#242629" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="coolNote" />
+    <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon.png" />
+    <link rel="mask-icon" href="/images/icons/safari-pinned-tab.svg" color="#242629" />
+    <meta name="msapplication-TileImage" content="/images/icons/icon-144x144.png" />
+    <meta name="msapplication-TileColor" content="#242629" />
   </head>
   <body>
     <noscript>
